client form update

--- a/projects/client/src/app/components/header/header.component.html
+++ b/projects/client/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="ordersDropdown">
             <li><a class="dropdown-item" routerLink="/order-import" routerLinkActive="active">Import Orders</a></li>
-            <li><a class="dropdown-item" routerLink="/order-list" routerLinkActive="active">View Orders</a></li>
+            <li><a class="dropdown-item" routerLink="/view-orders" routerLinkActive="active">View Orders</a></li>
           </ul>
         </li>
       </ul>
